Fix table header padding so text aligns with table contents

--- a/src/_assets/css/layout/_page.scss
+++ b/src/_assets/css/layout/_page.scss
@@ -118,7 +118,7 @@
   thead {
     th {
       text-align: left;
-      padding: 8px 10px;
+      padding-bottom: 8px;
     }
   }
 
